--- a/Термостабилизирование.ipynb
+++ b/Термостабилизирование.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3df1846a-94b9-444b-8a80-23f7e625844b",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
     "plt.ylabel('T, K')\n",
     "plt.title('Распределение температуры по поверхности основания лазера')\n",
     "plt.grid()\n",
-    "plt.figure()\n",
+    "#plt.figure()\n",
     "plt.show()\n"
    ]
   },
