--- a/Подбор волоконных фильтров 4(можно поиграть с k).ipynb
+++ b/Подбор волоконных фильтров 4(можно поиграть с k).ipynb
@@ -107,23 +107,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "be80a362",
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 62\u001b[39m\n\u001b[32m     60\u001b[39m         FSR-=\u001b[32m1e6\u001b[39m\n\u001b[32m     61\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m FSR\n\u001b[32m---> \u001b[39m\u001b[32m62\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mb\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfreq\u001b[49m\u001b[43m)\u001b[49m/\u001b[32m1e6\u001b[39m)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 59\u001b[39m, in \u001b[36mb\u001b[39m\u001b[34m(freq)\u001b[39m\n\u001b[32m     57\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mb\u001b[39m(freq):\n\u001b[32m     58\u001b[39m     FSR = \u001b[32m1000e6\u001b[39m\n\u001b[32m---> \u001b[39m\u001b[32m59\u001b[39m     \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28mabs\u001b[39m((\u001b[43ma\u001b[49m\u001b[43m(\u001b[49m\u001b[43mFSR\u001b[49m\u001b[43m)\u001b[49m  - (c/h -\u001b[32m0.35e6\u001b[39m))) > \u001b[32m1e6\u001b[39m:\n\u001b[32m     60\u001b[39m         FSR-=\u001b[32m1e6\u001b[39m\n\u001b[32m     61\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m FSR\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 51\u001b[39m, in \u001b[36ma\u001b[39m\u001b[34m(FSR)\u001b[39m\n\u001b[32m     49\u001b[39m         result.append(value)\n\u001b[32m     50\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m np.array(result)\n\u001b[32m---> \u001b[39m\u001b[32m51\u001b[39m T_values = np.abs(\u001b[43mT_filter_first\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfreq\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m     52\u001b[39m peaks, _ = find_peaks(T_values)\n\u001b[32m     53\u001b[39m max_peak_index = peaks[np.argmax(T_values[peaks])]\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 48\u001b[39m, in \u001b[36ma.<locals>.T_filter_first\u001b[39m\u001b[34m(freq)\u001b[39m\n\u001b[32m     46\u001b[39m result = []\n\u001b[32m     47\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m w \u001b[38;5;129;01min\u001b[39;00m freq:\n\u001b[32m---> \u001b[39m\u001b[32m48\u001b[39m     value = \u001b[43mt_filter_first\u001b[49m\u001b[43m(\u001b[49m\u001b[43mw\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     49\u001b[39m     result.append(value)\n\u001b[32m     50\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m np.array(result)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 43\u001b[39m, in \u001b[36ma.<locals>.t_filter_first\u001b[39m\u001b[34m(w)\u001b[39m\n\u001b[32m     41\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mt_filter_first\u001b[39m(w):\n\u001b[32m     42\u001b[39m     z = np.exp(\u001b[32m1\u001b[39mj*w*\u001b[32m2\u001b[39m*np.pi*T1/N)\n\u001b[32m---> \u001b[39m\u001b[32m43\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m  (\u001b[32m1\u001b[39mj * \u001b[43mnp\u001b[49m\u001b[43m.\u001b[49m\u001b[43msqrt\u001b[49m\u001b[43m(\u001b[49m\u001b[43mγ1\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m \u001b[49m\u001b[43mγ2\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m \u001b[49m\u001b[43mk1\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m \u001b[49m\u001b[43mk2\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m \u001b[49m\u001b[43mk3\u001b[49m\u001b[43m)\u001b[49m * np.sqrt(z**(-(N + M))))/(\u001b[32m1\u001b[39m - C1 * C2 * γ1 * z**(-N) - C2 * C3 * γ2 * z**(-M)\\\n\u001b[32m     44\u001b[39m         + C1 * C3 * γ1 * γ2 * z**(-(N + M)))\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "718.0\n"
      ]
     }
    ],
@@ -151,12 +143,12 @@
     "f_Er = c/h\n",
     "freq = freq - 80e6 + c/h\n",
     "\n",
-    "def a(M,N):\n",
+    "def a(FSR):\n",
     "    #FSR = 800e6\n",
     "    n = 1.46\n",
     "    l = 7 * c / (n  * FSR)\n",
-    "    N = 1\n",
-    "    M = 2\n",
+    "    N = 7\n",
+    "    M = 8\n",
     "    L = M/N * l\n",
     "    k1 = k3 = 0.25\n",
     "    k2 = 0.032\n",
