--- a/Термостабилизирование.ipynb
+++ b/Термостабилизирование.ipynb
@@ -93,7 +93,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
+   "id": "93b0840f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Если поверхность обдувается, то введите скорость, если не обдувается, то введите 0.0\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for /: 'list' and 'float'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 76\u001b[39m\n\u001b[32m     74\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m Al  \u001b[38;5;66;03m#Коэффициент поверхностной теплоотдачи\u001b[39;00m\n\u001b[32m     75\u001b[39m q = np.array([\u001b[32m5\u001b[39m, \u001b[32m9\u001b[39m, \u001b[32m13\u001b[39m, \u001b[32m17\u001b[39m])\n\u001b[32m---> \u001b[39m\u001b[32m76\u001b[39m result1 = deltaT(q[\u001b[32m0\u001b[39m], \u001b[43mteplootd\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m     77\u001b[39m result2 =deltaT(q[\u001b[32m1\u001b[39m], teplootd([\u001b[32m1\u001b[39m]))\n\u001b[32m     78\u001b[39m plt.figure(figsize = (\u001b[32m8\u001b[39m,\u001b[32m8\u001b[39m))\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 18\u001b[39m, in \u001b[36mteplootd\u001b[39m\u001b[34m(q)\u001b[39m\n\u001b[32m     17\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mteplootd\u001b[39m(q):\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m     tp = tv + np.mean(\u001b[43mdeltaT\u001b[49m\u001b[43m(\u001b[49m\u001b[43mq\u001b[49m\u001b[43m,\u001b[49m\u001b[32;43m0\u001b[39;49m\u001b[43m)\u001b[49m) \u001b[38;5;66;03m#Температура поверхности\u001b[39;00m\n\u001b[32m     19\u001b[39m     e = \u001b[32m0.09\u001b[39m \u001b[38;5;66;03m#Степень черноты поверхности\u001b[39;00m\n\u001b[32m     20\u001b[39m     B = \u001b[32m200e-3\u001b[39m \u001b[38;5;66;03m#Ширина поверхности. Нужно уточнить. Степень черноты тела — это энергетическая характеристика излучающего тела, равная отношению потока \u001b[39;00m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 16\u001b[39m, in \u001b[36mdeltaT\u001b[39m\u001b[34m(q, alpha)\u001b[39m\n\u001b[32m     14\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mdeltaT\u001b[39m(q, alpha):\n\u001b[32m     15\u001b[39m     b = \u001b[32m2\u001b[39m * alpha / (cp * delta) \u001b[38;5;66;03m#Коэффициент температуроотдачи\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m16\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mq\u001b[49m\u001b[43m \u001b[49m\u001b[43m/\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m2\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m \u001b[49m\u001b[43mmath\u001b[49m\u001b[43m.\u001b[49m\u001b[43mpi\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m \u001b[49m\u001b[43mlamba\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m \u001b[49m\u001b[43mdelta\u001b[49m\u001b[43m)\u001b[49m * j0((x*\u001b[32m1e-3\u001b[39m) * (b/a)**\u001b[32m0.5\u001b[39m)\n",
+      "\u001b[31mTypeError\u001b[39m: unsupported operand type(s) for /: 'list' and 'float'"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import math\n",
+    "from scipy.special import j0\n",
+    "import matplotlib.pyplot as plt\n",
+    "#Рассчёт коэффициента теплоотдачи\n",
+    "print('Если поверхность обдувается, то введите скорость, если не обдувается, то введите 0.0')\n",
+    "w = float(input()) #Скорость воздуха вдоль длины поверхности \n",
+    "tv = 25 #Температура окружающего воздуха\n",
+    "cp =  2495040 #Удельная объемная теплоёмкость. Металла???\n",
+    "delta = 3e-3 #Толщина основания узкополосного волоконного лазера\n",
+    "lamba = 230 #Коэффициент теплопроводности металла. Уточнить? Какой сплав? \n",
+    "a = 8.418e-5 #Коэффициент температуропроводности металла\n",
+    "x = np.linspace(-100, 99, 200)\n",
+    "def deltaT(q, alpha):\n",
+    "    b = 2 * alpha / (cp * delta) #Коэффициент температуроотдачи\n",
+    "    return q / (2 * math.pi * lamba * delta) * j0((x*1e-3) * (b/a)**0.5)\n",
+    "def teplootd(q):\n",
+    "    tp = tv + np.mean(deltaT(q,0)) #Температура поверхности\n",
+    "    e = 0.09 #Степень черноты поверхности\n",
+    "    B = 200e-3 #Ширина поверхности. Нужно уточнить. Степень черноты тела — это энергетическая характеристика излучающего тела, равная отношению потока \n",
+    "    #собственного излучения тела к потоку излучения абсолютно чёрного тела при той же температуре. У аллюминиевого листа e = 0.09\n",
+    "    L = 200e-3 #Длина поверхности\n",
+    "    #Рассчёт проводится для сухого воздуха при атмосферном давлении\n",
+    "    t0 = (tv + tp) / 2 #Определяющая температура\n",
+    "    if w == 0.0:\n",
+    "        L0 = (B * L) / (2 * (B + L))\n",
+    "    else:\n",
+    "        L0 = L\n",
+    "    ro = 353.089 / (t0 + 273.15) #Объёмная плотность кг/м^3\n",
+    "    a0 = 17.1625\n",
+    "    a1 = 4.82102e-2\n",
+    "    a2 = -2.17419e-5\n",
+    "    a3 = 7.06065e-9\n",
+    "    ny = (a0 + a1 * t0 + a2 * (t0**2) + a3 * (t0**3))/1e6 #Динамическая к-т вязкости, Па*с\n",
+    "    b0 = 1.00564e3\n",
+    "    b1 = 7.43322e-3\n",
+    "    b2 = 5.78429e-4\n",
+    "    b3 = -5.87508e-7\n",
+    "    b4 = 1.81359e-10\n",
+    "    Cp = b0 + b1 * t0 + b2 * (t0**2) + b3 * (t0**3) + b4 * (t0**4) #Удельная изобарная теплоёмкость, Дж/(кг*К)\n",
+    "    c0 = 2.41822\n",
+    "    c1 = 7.32841e-3\n",
+    "    c2 = -2.53698e-6\n",
+    "    c3 = 9.34274e-10\n",
+    "    Lamba = (c0 + c1 * t0 + c2 * t0**2 + c3 * t0**3)/100 #к-т теплопроводности, Вт/(м*К)\n",
+    "    v = ny / ro #Кинематическая к-т вязкости, м^2/c\n",
+    "    beta = 1 / t0 #К-т объёмного расширения, К^(-1)\n",
+    "    alpha = Lamba / (Cp * ro) #К-т температуропроводности, м^2/c\n",
+    "    Pr = ny * Cp / Lamba #Число прандтля\n",
+    "    Re = w * L0 / v #Число рейнольдса\n",
+    "    Gr = 9.8 * beta * abs(tp - tv) * (L0**3) / (v**2) #Число Грасгофа\n",
+    "    Ra = Gr * Pr #Число Релея\n",
+    "    #print(Ra)\n",
+    "    if w == 0.0:\n",
+    "        if (1e4 < Ra) and (Ra < 1e7):\n",
+    "            Nu = 0.54 * Ra**0.25\n",
+    "        elif (1e7 < Ra) and (Ra <= 1e11):\n",
+    "            Nu = 0.15 * Ra**(1 / 3)\n",
+    "    else:\n",
+    "        if Re <= 5 * 1e5:\n",
+    "            Nu = 0.664 * (Re**0.5) * (Pr**(1 / 3))\n",
+    "        elif (5 * 1e5 < Re) and (Re <= 3 * 1e7):\n",
+    "            Nu = 0.037 * (Re**0.8) * (Pr**0.43)\n",
+    "    #Nu - число Нуссельга \n",
+    "    Alk = Nu * Lamba / L0 #Коэффициент конвективной теплоотдачи\n",
+    "    if tv < tp:\n",
+    "        Alp = e * 0.00000005670367 * ((tp + 273.15)**4 - (tv + 273.15)**4) / (tp - tv)\n",
+    "    else:\n",
+    "        Alp = 0.0\n",
+    "    #Alp - коэффициент радиационной теплоотдачи\n",
+    "    Al = Alk + Alp #Суммарный коэффициент теплоотдачи\n",
+    "    q = Al * (tp - tv) #Удельная мощность теплового потока\n",
+    "    Q = q * B * L #Полная мощность теплового потока\n",
+    "    return Al  #Коэффициент поверхностной теплоотдачи\n",
+    "q = np.array([5, 9, 13, 17])\n",
+    "result1 = deltaT(q[0], teplootd([0]))\n",
+    "result2 =deltaT(q[1], teplootd([1]))\n",
+    "plt.figure(figsize = (8,8))\n",
+    "plt.plot(x , result1, label = 'q = 5 Вт')\n",
+    "#plt.plot(x , deltaT(q1), label = 'q = 9 Вт')\n",
+    "#plt.plot(x , deltaT(q2), label = 'q = 13 Вт')\n",
+    "#plt.plot(x , deltaT(q3), label = 'q = 17 Вт')\n",
+    "#print(\"ΔTцентр =\", deltaT(q2)[0]- deltaT(q1)[0])\n",
+    "#for i in range(len(x)):\n",
+    "#    if (1.24 * (deltaT(q2)[i] - deltaT(q1)[i]) - (deltaT(q2)[0]- deltaT(q1)[0])) <= 1e-1:\n",
+    "#        print(\"ΔTx =\",deltaT(q2)[i] - deltaT(q1)[i], \"на расстоянии x =\",x[i],\"мм\")\n",
+    "#print(deltaT(q2)[60] - deltaT(q1)[60])\n",
+    "#print(x[60])\n",
+    "#print(deltaT(q)[0])\n",
+    "plt.xlabel('x, мм')\n",
+    "plt.ylabel('T, K')\n",
+    "plt.title('Распределение температуры по поверхности основания лазера')\n",
+    "plt.grid()\n",
+    "plt.legend()\n",
+    "#plt.figure()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "3df1846a-94b9-444b-8a80-23f7e625844b",
    "metadata": {},
    "outputs": [
@@ -365,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "c555abe1-2060-49ef-bc1d-3c0ac371103b",
    "metadata": {},
    "outputs": [
@@ -385,9 +511,9 @@
     "tv = 25 #Температура окружающего воздуха\n",
     "tp = tv+1.1532966890717053 #Температура поверхности\n",
     "e = 0.07 #Степень черноты поверхности\n",
-    "B = 0.1 #Ширина поверхности. Нужно уточнить. Степень черноты тела — это энергетическая характеристика излучающего тела, равная отношению потока \n",
+    "B = 0.2 #Ширина поверхности. Нужно уточнить. Степень черноты тела — это энергетическая характеристика излучающего тела, равная отношению потока \n",
     "#собственного излучения тела к потоку излучения абсолютно чёрного тела при той же температуре. У аллюминиевого листа e = 0.09\n",
-    "L = 0.1 #Длина поверхности\n",
+    "L = 0.2 #Длина поверхности\n",
     "#Рассчёт проводится для сухого воздуха при атмосферном давлении\n",
     "\n",
     "t0 = (tv + tp) / 2 #Определяющая температура\n",
