--- a/Shooting method 2.ipynb
+++ b/Shooting method 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "4400b3c2-ed9a-4adb-b937-4c07ff058b1f",
    "metadata": {},
    "outputs": [
@@ -10,14 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите начальную мощность накачки Pp0:  80e-3\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Начальное значение Ps_guess: 0.6606941693230926\n"
+      "Начальное значение Ps_guess: 0.12349237193416099\n"
      ]
     }
    ],
@@ -97,7 +90,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -111,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
