--- a/ПодборВолоконногоФильтра8сем.ipynb
+++ b/ПодборВолоконногоФильтра8сем.ipynb
@@ -2,6 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "330da33a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.interpolate import interp1d\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.fft import fft, fftfreq\n",
+    "import pandas as pd\n",
+    "from scipy.signal import find_peaks\n",
+    "%matplotlib qt \n",
+    "# Загрузка данных\n",
+    "df = pd.read_csv('50mks1mSA0.csv')\n",
+    "spectr1 = np.array(df.iloc[:,0])\n",
+    "spectr1 = np.linspace(1.4100E-04, 6.4100E-04, 625000)\n",
+    "Spectr1 = np.array(df.iloc[:,1])\n",
+    "dt = spectr1[1] - spectr1[0]\n",
+    "# Вычисление FFT\n",
+    "fft_signal = np.fft.fft(Spectr1)\n",
+    "fft_signal = fft_signal[:len(fft_signal)//2-1]\n",
+    "freq = np.fft.fftfreq(len(Spectr1), d = dt)\n",
+    "freq = freq[freq>0]\n",
+    "plt.figure(figsize = (10,6))\n",
+    "plt.xlim([65.5e6, 93.5e6])\n",
+    "plt.plot(freq, np.abs(fft_signal), label = 'Инструментальный контур однокольцевого фильтра')\n",
+    "plt.legend()\n",
+    "plt.xlabel('Длина волны, нм')\n",
+    "plt.ylabel('I/I0 и пропускание')\n",
+    "plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "id": "97c0a988",
    "metadata": {},
