--- a/Untitled-2.ipynb
+++ b/Untitled-2.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "65fd27c4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "df = pd.read_csv('RigolDS4_novii_config0.csv')\n",
+    "df = pd.read_csv('RigolDS9_nA3.csv')\n",
     "t_signal = np.linspace(-1.0000E-03, 1.0000E-03, 500000)\n",
     "Amp_signal = np.array(df.iloc[:,1])\n",
     "df[df.columns[0]] = t_signal\n",
-    "df.to_csv('modified_data_novii_config0.csv', index=False)"
+    "df.to_csv('modified_nA3.csv', index=False)"
    ]
   }
  ],
